# iwa

./: .gitignore  ARCHITECTURE.md  README.md  iwa-PRD.md.md
iwa-circuit/: .gitignore  gen_input.js  package.json  reputation.circom
iwa-circuit/scripts/: build_and_prove.sh  setup.sh
iwa-prover/: .gitignore  Cargo.toml  package.json
iwa-prover/js/: harness.js  zk.js
iwa-prover/src/: lib.rs
iwa-savings/contracts/savings/src/: lib.rs  test.rs
iwa-verifier/: Cargo.toml
iwa-verifier/contracts/verifier/: Cargo.toml  build.rs
iwa-verifier/contracts/verifier/src/: lib.rs  test.rs
iwa-verifier/contracts/verifier/testdata/: artifacts.json  convert.js  proof_pass.hex  proof_tampered.hex  public_pass.json  public_tampered.json
iwa-web/: .gitignore  index.html  landing.html  package-lock.json  package.json  vite.config.ts
iwa-web/design/: iwa-prototype.html
iwa-web/public/zk/: rep_final.zkey  reputation.wasm  verification_key.json
iwa-web/public/zk/iwa_prover/: iwa_prover.d.ts  iwa_prover.js  iwa_prover_bg.wasm  iwa_prover_bg.wasm.d.ts  package.json
iwa-web/src/: App.module.css  App.tsx  circomlibjs.d.ts  landing.tsx  main.tsx
iwa-web/src/landing/: LandingCommunity.module.css  LandingCommunity.tsx  LandingDock.module.css  LandingDock.tsx  LandingFooter.module.css  LandingFooter.tsx  LandingHero.module.css  LandingHero.tsx  LandingNav.module.css  LandingNav.tsx  LandingPage.module.css  LandingPage.tsx  LandingShowcase.module.css  LandingShowcase.tsx
iwa-web/src/lib/: convert.ts  iwaContract.ts  stellarConfig.ts  types.ts  wallet.ts  zk.ts
iwa-web/src/litepaper/: LitepaperPage.tsx
iwa-web/src/roadmap/: RoadmapPage.tsx
iwa-web/src/screens/: CircleView.module.css  CircleView.tsx  ProveView.tsx
