[package]
name = "iwa-prover"
version = "0.1.0"
edition = "2021"
description = "Browser/WASM Groth16 (BN254) prover for the Iwa reputation circuit"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Arkworks ZK proving (same pins as the Nethermind reference prover crate).
ark-bn254 = { version = "0.6.0", default-features = false, features = ["curve"] }
ark-circom = { git = "https://github.com/NethermindEth/circom-compat.git", default-features = false, branch = "wasm-no-parallel" }
ark-ff = { version = "0.6.0", default-features = false }
ark-groth16 = { version = "0.6.0", default-features = false }
ark-relations = { version = "0.6.0", default-features = false }
ark-serialize = { version = "0.6.0", default-features = false }
ark-snark = { version = "0.6.0", default-features = false }
ark-std = { version = "0.6.0", default-features = false, features = ["std"] }

num-bigint = { version = "0.4", default-features = false }
rand = { version = "0.8", default-features = false, features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.2", features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

# Skip wasm-opt (avoids downloading binaryen; not needed for the demo).
[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
